# qt6_cmake_cookbook

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CommonHeaders/: CMakeLists.txt  MyCommonHeaders.h
CountableModels/: CMakeLists.txt  CountableToDoListModel.h
ObjectTypes/: CMakeLists.txt
ToDoListModel/: CMakeLists.txt  ToDoListModel.h
ToDoObjects/: CMakeLists.txt  ToDoObjects.h
app/: CMakeLists.txt  main.cpp  main.qml
app/CommonHeaders/: CMakeLists.txt  IMyInterface.h
app/CountableModels/: CMakeLists.txt  CountableToDoListModel.cpp  CountableToDoListModel.h
app/ObjectTypes/: Animal.qml  Person.h
app/ToDoListModel/: CMakeLists.txt  ToDoListModel.cpp  ToDoListModel.h
app/ToDoObjects/: ToDoObjects.cpp
app/object_types/: CMakeLists.txt  Person.cpp
tests/: CMakeLists.txt
